# chronos-forecasting

./: .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  README_for_bob.md  THIRD-PARTY-LICENSES.txt  chronos.yml  classification_demo.ipynb  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci-mlx.yml  ci.yml  eval-model.yml  eval-pr-comment.yml  publish-to-pypi.yml
ci/: eval_model.py
ci/evaluate/: backtest_config.yaml
docs/: index.md
docs/api/: base.md  chronos-2.md  chronos-bolt.md  chronos.md
notebooks/: chronos-2-last-latent-demo.ipynb  chronos-2-quickstart.ipynb  deploy-chronos-bolt-to-amazon-sagemaker.ipynb  deploy-chronos-to-amazon-sagemaker.ipynb  plot_quantile_forecast.ipynb  plot_quantile_forecast_finetune_within_patient.ipynb  webdataset_to_wav.ipynb
scripts/: README.md  kernel-synth.py
scripts/evaluation/: agg-relative-score.py  evaluate.py
scripts/evaluation/configs/: exchange_zero_shot.yaml  exchange_zero_shot_test.yaml  in-domain.yaml  new_exchange_rate_in_domain.yaml  new_exchange_rate_zero_shot.yaml  zero-shot.yaml
scripts/evaluation/results/: chronos-bolt-base-agg-rel-scores.csv  chronos-bolt-base-in-domain.csv  chronos-bolt-base-zero-shot.csv  chronos-bolt-mini-agg-rel-scores.csv  chronos-bolt-mini-in-domain.csv  chronos-bolt-mini-zero-shot.csv  chronos-bolt-small-agg-rel-scores.csv  chronos-bolt-small-in-domain.csv  chronos-bolt-small-zero-shot.csv  chronos-bolt-tiny-agg-rel-scores.csv  chronos-bolt-tiny-in-domain.csv  chronos-bolt-tiny-zero-shot.csv  chronos-t5-base-agg-rel-scores.csv  chronos-t5-base-in-domain.csv  chronos-t5-base-zero-shot.csv  chronos-t5-large-80-in-domain.csv  chronos-t5-large-80_original_predicciones.csv  chronos-t5-large-96-in-domain.csv  chronos-t5-large-agg-rel-scores.csv  chronos-t5-large-in-domain.csv  chronos-t5-large-original-96_predicciones.csv  chronos-t5-large-zero-shot.csv  chronos-t5-mini-agg-rel-scores.csv  chronos-t5-mini-in-domain.csv  chronos-t5-mini-zero-shot.csv  chronos-t5-small-agg-rel-scores.csv  chronos-t5-small-in-domain.csv  chronos-t5-small-zero-shot.csv  chronos-t5-tiny-agg-rel-scores.csv  chronos-t5-tiny-in-domain.csv  chronos-t5-tiny-zero-shot.csv  seasonal-naive-in-domain.csv  seasonal-naive-zero-shot.csv
scripts/experiments/: README.md  example.py  experiment_with_real_datasets.py
scripts/experiments/configs/: datasets.yaml  synthetic_datasets.yaml
scripts/experiments/synthetic_datasets/: README.md  constants.py  covariates.py  experiment_with_synthetic_datasets.py  generate_synthetic_datasets.py  target.py
scripts/onnx/: README.md  export_chronos2_to_onnx.py  fix_onnx_model.py  quantize_chronos2.py  validate_chronos2_onnx.py
scripts/prepare_data/: webdataset_to_parquet.py
scripts/preprocessing_training_data/: prediction_lengths.json  zero_shot_datasets.py
scripts/training/: data_generation.py  optimized train.py  test.ipynb  train.py  train_cpu.py  train_incremental.py
scripts/training/configs/: chronos-gpt2.yaml  chronos-t5-large.yaml  chronos-t5-mini.yaml  chronos-t5-small-wasserstein.yaml  chronos-t5-small.yaml  chronos-t5-tiny-bob.yaml  chronos-t5-tiny-cpu.yaml  chronos-t5-tiny.yaml  google_t5-efficient-base.yaml  google_t5-efficient-large.yaml  google_t5-efficient-small.yaml  paper-config-base.yaml  paper-config-large.yaml
src/chronos/: __about__.py  __init__.py  base.py  boto_utils.py  chronos.py  chronos_bolt.py  df_utils.py  df_utils2.py  utils.py
src/chronos/chronos2/: __init__.py  _deprecated.py  config.py  dataset.py  layers.py  model.py  pipeline.py  preprocess.py  preprocessing.py  trainer.py
src/chronos/chronos2/vllm/: README.md  __init__.py  io_processor.py  model.py  multimodal.py
src/chronos/chronos2/vllm/protocol/: __init__.py  data_prep.py  forecast.py  (+1 more)
src/chronos/mlx/: __init__.py  chronos.py  t5.py  translate.py
src/chronos_mlx/: chronos.py  t5.py
src/chronosx/: chronosx.py
src/chronosx/injection_blocks/: basic_modules.py  block_mapping.py  input_injection_block.py  output_injection_block.py
src/chronosx/utils/: __init__.py  chronos_dataset.py  epf.py  hf_data_loader.py  m5.py  prepare_covariates.py  transform.py  utils.py
test/: __init__.py  test_chronos.py  test_chronos2.py  test_chronos2_trainer.py  test_chronos_bolt.py  test_chronos_mlx.py  test_df_utils.py  test_preprocess.py  test_utils.py  util.py
test/chronos2/vllm/: __init__.py  test_chronos2_plugin.py  test_data_prep.py  test_helpers.py  test_protocol.py  test_quantiles.py  test_validation.py
test/dummy-chronos-bolt-model/: config.json  model.safetensors
test/dummy-chronos-model/: config.json  generation_config.json  model.safetensors
test/dummy-chronos2-lora/: adapter_config.json  adapter_model.safetensors
test/dummy-chronos2-model/: config.json  model.safetensors
(+4 files in other folders)
