[project]
name = "chronosx"
version = "1.0.0"
authors = [
  { name="Pedro Mercado", email="pedroml@amazon.com" }
]
description = "ChronosX: Adapting Pretrained Time Series Models with Exogenous Variables"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "chronos-forecasting[training]==1.5.0",
    "transformers==4.47.1",
    "accelerate==0.34.2",
    "datasetsforecast==1.0.0",
    "fev==0.5.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronosx"]

[project.urls]
Homepage = "https://www.amazon.science/publications/chronosx-adapting-pretrained-time-series-models-with-exogenous-variables"
Issues = "https://github.com/amazon-science/chronos-forecasting/issues"
Paper = "https://arxiv.org/pdf/2503.12107"

[tool.mypy]
ignore_missing_imports = true