[project]
name = "chronos-forecasting"
dynamic = ["version"]
authors = [
  { name = "Abdul Fatir Ansari", email = "ansarnd@amazon.com" },
  { name = "Lorenzo Stella", email = "stellalo@amazon.com" },
  { name = "Caner Turkmen", email = "atturkm@amazon.com" },
  { name = "Oleksandr Shchur", email = "shchuro@amazon.com" },
  { name = "Jaris Küken", email = "kuekenj@amazon.com" },
  { name = "Andreas Auer", email = "auerand@amazon.com" },
]
description = "Chronos: Pretrained models for time series forecasting"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0,<3",
  "transformers>=4.41,<5",
  "accelerate>=0.34,<2",
  "numpy>=1.21,<3",
  "einops>=0.7.0,<1",
  "scikit-learn>=1.6.0,<2",
  "boto3",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronos"]

[tool.hatch.version]
path = "src/chronos/__about__.py"

[project.optional-dependencies]
test = ["pytest~=8.0", "numpy>=1.21,<3", "fev>=0.6.1", "pandas>=2.0,<2.4"]
typecheck = ["mypy~=1.9"]
dev = [
  "gluonts[pro]~=0.16",
  "datasets>=3.0,<4",
  "typer",
  "tensorboard",
  "typer-config",
  "joblib",
  "fev>=0.6.1",
  "rich",
  "pandas>=2.0,<2.4",
]

[project.urls]
Homepage = "https://github.com/amazon-science/chronos-forecasting"
Issues = "https://github.com/amazon-science/chronos-forecasting/issues"
Chronos-Paper = "https://arxiv.org/abs/2403.07815"
Chronos-2-Paper = "https://arxiv.org/abs/2510.15821"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 119
lint.ignore = [
  "E501", # Line too long
  "E731", # Do not assign a `lambda` expression, use a `def`
  "E722", # Do not use bare `except`
]
